# cannode

./: CMakeLists.txt  README.md  main.cc  package.xml  sa_msgs.tar.orin  脚本.txt
.cursor/rules/: arch.mdc
protobuf/proto/common_msgs/basic_msgs/: geometry.proto  header.proto  vehicle_signal.proto
protobuf/proto/common_msgs/chassis_msgs/: chassis.proto  joint.proto
protobuf/proto/common_msgs/config_msgs/: vehicle_config.proto
protobuf/proto/control_base/: gain_scheduler_conf.proto  lat_based_lqr_controller_conf.proto  lon_based_pid_controller_conf.proto  mpc_controller.proto  multipoint_preview_pp.proto  pid_conf.proto  pipeline.proto  preprocessor.proto
protobuf/proto/control_msgs/: pad_msg.proto
protobuf/proto/localization_msgs/: imu.proto  localization.proto  pose.proto
protobuf/proto/planning_msgs/: decision.proto  planning.proto  planning_internal.proto  run_mode_conf.proto
src/cannode/: CMakeLists.txt  IMPLEMENTATION_NOTES.md  实现总结.md
src/cannode/doc/: changan_protocol.dbc  长安重工-CAN协议.xlsx
src/cannode/launch/: cannode.launch.py  send_control_cmd.launch.py
src/cannode/protobuf/proto/common_msgs/basic_msgs/: drive_state.proto  error_code.proto  pnc_point.proto  vehicle_id.proto  vehicle_state.proto
src/cannode/protobuf/proto/control_base/: calibration_table.proto  check_status.proto  control_debug.proto  lat_pid_controller_config.proto  leadlag_conf.proto  local_view.proto  lodmc_controller_conf.proto  mrac_conf.proto  plugin_declare_info.proto  stanley_controller.proto
src/cannode/protobuf/proto/control_msgs/: control_cmd.proto  input_debug.proto
src/cannode/protobuf/proto/external_command_msgs/: command_status.proto  lane_segment.proto  speed_command.proto
src/cannode/protobuf/proto/localization_msgs/: gps.proto  localization_status.proto
src/cannode/src/: README.md  chassis_driver.cc  chassis_driver.h  msg_manager.cc  msg_manager.h  socket_can_interface.cc  socket_can_interface.h
src/cannode/src/low_level_controller/: acc_to_speed_controller.cc  acc_to_speed_controller.h  valve_to_angle_controller.cc  valve_to_angle_controller.h
src/cannode/src/vehicle_protocol/: changan.cc  changan.h
src/cannode/test/: QUICKSTART.md  README.md  send_control_cmd.cc  test_arm.sh  test_comprehensive.sh  test_estop.sh  test_scenarios.txt  test_shovel.sh  test_speed.sh
src/vehicle_protocol/: changan.cc  changan.h  shantui.cc  shantui.h  xugong.cc  xugong.h
